--- a/Project.toml
+++ b/Project.toml
@@ -4,5 +4,7 @@ authors = ["Schaffer Krisztian <schaffer.krisztian@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+Jive = "ba5e3d4b-8524-549f-bc71-e76ad9e9deed"
 PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
