--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,11 @@ authors = ["Schaffer Krisztian <schaffer.krisztian@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Jive = "ba5e3d4b-8524-549f-bc71-e76ad9e9deed"
 PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
