Travis config update

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ notifications:
   email: false
 
 script:
-  - julia --project --check-bounds=yes -e 'import Pkg; Pkg.build(); Pkg.test("Circo"; coverage=false)'
+  - julia --project --check-bounds=yes -e 'import Pkg; Pkg.activate("."); Pkg.build(); Pkg.test("Circo"; coverage=false)'
