--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "Circo"
 uuid = "4f05b990-1b3c-11ea-1014-77885b5fe94c"
-authors = ["Schaffer Krisztian <schaffer.krisztian@gmail.com>"]
+authors = ["Schäffer Krisztián"]
 version = "0.1.0"
 
 [deps]
