--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: julia
-
+os:
+  - linux
+  - osx
 julia:
   - nightly
   - 1.3
-
+matrix:
+  allow_failures:
+    - julia: nightly
+  fast_finish: true
 script:
   - julia --project --check-bounds=yes -e 'import Pkg; Pkg.activate("."); Pkg.build(); Pkg.test("Circo"; coverage=false)'
