--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Jive = "ba5e3d4b-8524-549f-bc71-e76ad9e9deed"
 MLStyle = "d8e11817-5142-5d16-987a-aa16d5891078"
+MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
 MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 PkgBenchmark = "32113eaa-f34f-5b0d-bd6c-c81e245fc73d"
 PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
